<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_border"
    tools:context=".signup.VerifyOTP">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/close_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:padding="5dp"
                android:src="@drawable/general_close_icon" />

            <TextView
                android:id="@+id/text_EnterOtpHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/muli_black"
                android:includeFontPadding="false"
                android:text="@string/text_EnterOTPhere"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="45sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/verification_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/appMainColor"
            android:elegantTextHeight="false"
            android:elevation="10dp"
            android:fontFamily="@font/muli_black"
            android:includeFontPadding="true"
            android:text="@string/otp_verification_text"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="24sp"/>

        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-15dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/prePhoneNoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:includeFontPadding="false"
                android:text="@string/otp_description_text"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="16sp" />

            <com.chaos.view.PinView
                android:id="@+id/pinViewBox"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:cursorVisible="true"
                android:inputType="number"
                android:itemBackground="#e5e5e5"
                app:cursorColor="#000"
                app:hideLineWhenFilled="true"
                app:itemCount="6"
                app:itemHeight="40dp"
                app:itemRadius="5dp"
                app:itemWidth="40dp"
                app:lineColor="@color/colorAccent" />

            <Button
                android:id="@+id/verifyOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_button"
                android:elevation="10dp"
                android:text="Verify Otp"
                android:textColor="#fff" />

            <Button
                android:id="@+id/OTP_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="#00000000"
                android:elevation="10dp"
                android:layout_gravity="center"
                android:text="Resend OTP"
                android:textColor="@color/appMainColor"
                android:textAllCaps="false"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>