<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basic_white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".dashboard.main.Dashboard"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu" />

    <LinearLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-30dp"
            android:background="@drawable/rounded_dashboard_scroll_view"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/main_scrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ScrollView_inside"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <!-- DashBoard boxes -->

                    <!-- Box 3 -->
                    <RelativeLayout
                        android:id="@+id/Dashboard3"
                        android:layout_width="match_parent"
                        android:layout_height="190dp">

                        <RelativeLayout
                            android:id="@+id/Dashboard3_Box"
                            android:layout_width="match_parent"
                            android:layout_height="140dp"
                            android:layout_margin="20dp"
                            android:background="@drawable/rounded_dashboard_3">

                            <TextView
                                android:id="@+id/db3_text"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="45dp"
                                android:layout_marginTop="10dp"
                                android:fontFamily="@font/baloo"
                                android:includeFontPadding="false"
                                android:padding="15dp"
                                android:text="Track\nCriminals"
                                android:textAlignment="center"
                                android:textColor="@color/basic_black"
                                android:textSize="30sp" />

                            <Button
                                android:id="@+id/db3_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentBottom="true"
                                android:background="#00000000"
                                android:padding="10dp"
                                android:drawableStart="@drawable/pro_designation_icon"
                                android:textColor="@color/basic_black" />


                        </RelativeLayout>

                        <ImageView
                            android:id="@+id/db3_image"
                            android:layout_width="115dp"
                            android:layout_height="115dp"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="33dp"
                            android:layout_marginRight="5dp"
                            android:src="@drawable/view_c_repo" />

                    </RelativeLayout>

                    <!-- Box 2 -->
                    <RelativeLayout
                        android:id="@+id/Dashboard2"
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        android:layout_marginTop="-30dp">

                        <RelativeLayout
                            android:id="@+id/Dashboard2_Box"
                            android:layout_width="match_parent"
                            android:layout_height="140dp"
                            android:layout_margin="20dp"
                            android:background="@drawable/rounded_dashboard_2">

                            <TextView
                                android:id="@+id/db2_text"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_alignParentRight="true"
                                android:layout_marginTop="10dp"
                                android:layout_marginRight="8dp"
                                android:fontFamily="@font/baloo"
                                android:includeFontPadding="false"
                                android:padding="15dp"
                                android:text="@string/text_AddCriminalReport"
                                android:textAlignment="center"
                                android:textColor="@color/basic_black"
                                android:textSize="30sp" />

                            <!--Button
                                android:id="@+id/db2_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentBottom="true"
                                android:background="#00000000"
                                android:padding="20dp"
                                android:text="@string/text_AddPlus"
                                android:textColor="@color/basic_black" /-->


                        </RelativeLayout>

                        <ImageView
                            android:id="@+id/db2_image"
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:layout_alignParentLeft="true"
                            android:layout_marginLeft="-5dp"
                            android:layout_marginTop="25dp"
                            android:src="@drawable/new_c_repo" />

                    </RelativeLayout>

                    <!-- Box 1 -->
                    <RelativeLayout
                        android:id="@+id/Dashboard1"
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        android:layout_marginTop="-30dp">

                        <RelativeLayout
                            android:id="@+id/Dashboard1_Box"
                            android:layout_width="match_parent"
                            android:layout_height="140dp"
                            android:layout_margin="20dp"
                            android:background="@drawable/rounded_dashboard_1">

                            <TextView
                                android:id="@+id/db1_text"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="35dp"
                                android:layout_marginTop="19dp"
                                android:fontFamily="@font/baloo"
                                android:includeFontPadding="false"
                                android:padding="15dp"
                                android:text="@string/text_HeatMap"
                                android:textColor="@color/basic_black"
                                android:textSize="30sp" />

                            <Button
                                android:id="@+id/db1_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentBottom="true"
                                android:background="#00000000"
                                android:padding="20dp"
                                android:text="@string/text_ExpandAll"
                                android:textColor="@color/basic_black" />


                        </RelativeLayout>

                        <ImageView
                            android:id="@+id/db1_image"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="31dp"
                            android:src="@drawable/pro_map_image" />

                    </RelativeLayout>

                    <!-- Box 4 -->
                    <RelativeLayout
                        android:id="@+id/Dashboard4"
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        android:layout_marginTop="-30dp">

                        <RelativeLayout
                            android:id="@+id/Dashboard4_Box"
                            android:layout_width="match_parent"
                            android:layout_height="140dp"
                            android:layout_margin="20dp"
                            android:background="@drawable/rounded_dashboard_4">

                            <TextView
                                android:id="@+id/db4_text"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_alignParentRight="true"
                                android:layout_marginTop="20dp"
                                android:layout_marginRight="15dp"
                                android:fontFamily="@font/baloo"
                                android:includeFontPadding="false"
                                android:padding="15dp"
                                android:text="@string/text_SOS"
                                android:textAlignment="center"
                                android:textColor="@color/basic_red"
                                android:textSize="30sp" />

                            <Button
                                android:id="@+id/db4_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentBottom="true"
                                android:background="#00000000"
                                android:padding="20dp"
                                android:text="@string/text_View"
                                android:textColor="@color/basic_black" />


                        </RelativeLayout>

                        <ImageView
                            android:id="@+id/db4_image"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_alignParentLeft="true"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="30dp"
                            android:src="@drawable/sos_icon" />

                    </RelativeLayout>


                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>
